fixed hover/focus color on filters buttons on mobile devices

--- a/src/App.sass
+++ b/src/App.sass
@@ -541,6 +541,11 @@
 				color: #562894
 				span
 					color: #562894
+			&:focus 
+				background-color: #562894d4
+				color: white
+				span
+					color: white
 			
 // ---------------------------------- MEDIA-MOBILE-L-STYLES --------------------------------------------------------
 @media screen and (max-width: 425px)
